--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-EMAIL_USER = "manugeetech@gmail.com"
-EMAIL_PASS = "ignv rpgq pvgd ddrj"
+EMAIL_USER = "booking@astutehcc.com"
+EMAIL_PASS = "fN%8h[928HB["
 PORT = 8000
-ADMIN_EMAIL = "otaigbeemmanuel21@gmail.com"
+ADMIN_EMAIL = "admin@astutehcc.com"
 RECAPTCHA_SECRET = "6LcYZOsqAAAAAHONG1gJTpib4TiFPOLjoH5eb05k"
